--- a/be/package.json
+++ b/be/package.json
@@ -27,7 +27,8 @@
     "multer": "^2.0.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^7.0.3",
-    "passport-apple": "^2.0.2",
+    "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
     "twilio": "^5.7.1"
   },
   "devDependencies": {
